自定tabbar，修复已知问题

--- a/resmanage-uniapp/src/style/global.scss
+++ b/resmanage-uniapp/src/style/global.scss
@@ -1,3 +1,7 @@
+:root{
+  --color-danger: #f1563a;
+}
+
 .container{
   box-sizing: border-box;
   padding: 0 36upx;
@@ -6,4 +10,62 @@
 .pH{
   height: 180upx;
   width: 20upx;
+}
+
+.menu{
+  z-index: 999;
+  opacity: 0.95;
+  height: auto;
+  border-radius: 12upx;
+  overflow: hidden;
+  color: black;
+  box-shadow: 0 0 20upx 10upx rgba(0, 0, 0, 0.2);
+  transform-origin: right -12upx;
+  animation: show 0.15s ease-in-out forwards;
+
+  @keyframes show {
+    0% {
+      transform: scale(0);
+    }
+    90% {
+      transform: scale(1.02);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  .item {
+    --border: 1upx;
+    padding: 12upx;
+    background: rgba(255, 255, 255, 1);
+    border-bottom: var(--border) solid rgba(187, 187, 187, 0.6);
+
+    &:active {
+      background: #f5f5f5;
+    }
+  }
+}
+
+.uni-tabbar {
+  background-color: transparent !important;
+  .uni-tabbar-border {
+    background-color: #e54d42 !important;
+  }
+  .uni-tabbar__item {
+    height: 100rpx !important;
+    @media screen and (min-width: 1023px) {
+      padding-bottom: 48rpx;
+    }
+    .uni-tabbar__icon {
+      width: 40rpx !important;
+      height: 40rpx !important;
+    }
+  }
+}
+
+.global--container{
+
+  @media screen and (min-width: 1023px) {
+    padding-left: 60px;
+  }
 }
